--- a/main.html
+++ b/main.html
@@ -16,8 +16,14 @@
 	<table border>
 		<tr>
 			<td id="col1"><img src="https://www.thoughtco.com/thmb/6Kh8BT2gA24_rXlW4IlRvX64KPE=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/hadid-468889296-56aada565f9b58b7d00904c8.jpg"></td>
-			<td id="col2"></td>
-			<td id="col3"></td>
+			<td id="col2"><p>Unit #5 -Floor Plans</p><ol type="A" style="text-align:center;">
+				<li>Kitchen</li>
+				<li>Bathroom</li>
+				<li>Using "Slabs"</li>
+				<li>Georgian Home</li>
+				<li>Sketching Assignment #5</li>
+			</ol></td>
+			<td id="col3"><img src="https://www.thoughtco.com/thmb/6Kh8BT2gA24_rXlW4IlRvX64KPE=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/hadid-468889296-56aada565f9b58b7d00904c8.jpg"></td>
 		</tr>*
 		<tr></tr>
 	</table>
